@@ -9,6 +9,9 @@
 
 	* libfreeipmi/src/ipmi-interface.c (ipmi_cmd): Add parameter
 	checks.
+
+	* libfreeipmi/src/ipmi-msg-support-cmds.c
+	(ipmi_get_channel_number2): Add parameter check.
 	
 2006-01-29  Albert Chu  <chu11@llnl.gov>
 
